# rowguard

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_PROMPT.md  LICENSE  MANIFEST.md  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benchmarks/: test_validation_benchmark.py
docs/: README.md  READTHEDOCS.md  api.md  conf.py  index.md  requirements.txt  spec.md
docs/_static/: custom.css
docs/architecture/: ASYNC.md  CACHE.md  DESIGN_DECISIONS.md  DIALECT_SUPPORT.md  EXECUTION_PIPELINE.md  FILTER_PUSHDOWN.md  INTERNAL_API.md  PERFORMANCE.md  PLUGIN_SYSTEM.md  QUERY_COMPILATION.md  QUERY_ENGINE.md  RESULT_OBJECT.md  ROW_ADAPTER.md  SQLRULES_INTEGRATION.md  STREAMING.md  VALIDATION_ENGINE.md
docs/developer/: BENCHMARKS.md  CONTRIBUTING.md  CURSOR_PROMPT.md  MILESTONES.md  TESTING.md
docs/examples/: index.md
docs/guides/: async.md  best-practices.md  design-philosophy.md  faq.md  installation.md  orm-sqlmodel.md  performance.md  quickstart.md  rejection-policies.md  sqlrules-pushdown.md  start-here.md  streaming.md  troubleshooting.md  upgrading.md
docs/integrations/: CORE.md  ORM.md  RAW_SQL.md  REFLECTION.md  SQLMODEL.md  WHY_NOT_SQLMODEL.md
docs/project/: releasing.md  supported.md
docs/reference/: api.md  errors.md
docs/rejection/: CALLBACKS.md  DIAGNOSTICS.md  QUARANTINE.md  REJECTION_HANDLING.md  REJECTION_POLICIES.md
docs/validation/: PARTIAL_VALIDATION.md  PYDANTIC.md  TYPE_SUPPORT.md  VALIDATION_ERRORS.md
examples/: README.md  async_basic.py  basic.py  callback_basic.py  orm_entity.py  orm_projected.py  quarantine_jsonl.py  sqlmodel_basic.py  sqlrules_default.py  streaming.py
src/rowguard/: __init__.py  api.py  cache.py  diagnostics.py  errors.py  statistics.py
tests/: conftest.py
tests/async/: conftest.py  test_aselect.py  test_astream.py  test_async_edges.py  test_cancellation.py  test_parity.py
tests/integration/: test_core.py
tests/streaming/: test_memory.py  test_stream.py  test_stream_edges.py
tests/typing/: async_stream_result_typing.py  query_result_typing.py  stream_result_typing.py
tests/unit/: test_aprocess_row.py  test_bugfix_02.py  test_bugfix_regressions.py  test_coverage_edges.py  test_orm_adapter.py  test_planner.py  test_planning_02.py  test_processor.py  test_pydantic_validator.py  test_query_result.py  test_rejection_platform.py  test_rejection_platform_edges.py  test_rejection_policies.py  (+1 more)
(+44 files in other folders)
